--- a/public/static/plugs/lay-module/tableData/tableData.scss
+++ b/public/static/plugs/lay-module/tableData/tableData.scss
@@ -8,6 +8,12 @@
             color: #808080
         }
 
-        .layui-btn {}
+        .layui-btn {
+            pointer-events: none;
+
+            i {
+                pointer-events: all;
+            }
+        }
     }
 }
