完成通过注释生成table选择器组件；完善table选择器必选效果。

--- a/public/static/plugs/lay-module/tableData/tableData.css
+++ b/public/static/plugs/lay-module/tableData/tableData.css
@@ -12,3 +12,6 @@
 .table-data-container .layui-input .layui-btn i {
   pointer-events: all;
 }
+.table-data-container .layui-form-danger + .layui-input {
+  border-color: #ff5722 !important;
+}
