完成curd的城市选择器组件；

--- a/app/admin/view/test/goods/add.html
+++ b/app/admin/view/test/goods/add.html
@@ -150,6 +150,18 @@
 
                 </div>
             </div>
+        </div>        
+        <div class="layui-form-item">
+            <label class="layui-form-label">产地</label>
+            <div class="layui-input-block">
+                <input class="layui-input" name="from_area" data-toggle="city-picker" lay-verify="required" value="" type="text" data-level="" readonly data-field-code="0" data-field-name-province="0" >
+            </div>
+        </div>        
+        <div class="layui-form-item">
+            <label class="layui-form-label">仓库</label>
+            <div class="layui-input-block">
+                <input class="layui-input" name="store_city" data-toggle="city-picker" lay-verify="required" value="" type="text" data-level="city" readonly >
+            </div>
         </div>
         <div class="hr-line"></div>
         <div class="layui-form-item text-center">
