--- a/view/index/welcome.html
+++ b/view/index/welcome.html
@@ -41,8 +41,8 @@
                 <p class="desc">{$data.description|default=''}</p>
                 <p class="operation">
                     <a class="start" target="_blank" href="http://doc.ulthon.com/home/read/ulthon_admin/home.html"> 起步 <i class="icon-play"></i></a>
-                    <a class="github button-grya" target="_blank" href="https://github.com/zhongshaofa/ulthon_admin"><i class="icon-github-big"></i>GitHub</a>
-                    <a class="gitee button-grya" target="_blank" href="https://gitee.com/zhongshaofa/ulthon_admin"><i class="icon-gitee"></i>Gitee</a>
+            
+                    <a class="gitee button-grya" target="_blank" href="https://gitee.com/ulthon/ulthon_admin"><i class="icon-gitee"></i>Gitee</a>
                 </p>
             </div>
             <!-- 框架特性-->
