--- a/app/admin/view/system/config/upload.html
+++ b/app/admin/view/system/config/upload.html
@@ -92,8 +92,15 @@
     <div class="layui-form-item" v-if="upload_type == 'txcos'" v-cloak>
         <label class="layui-form-label required">存储桶名称</label>
         <div class="layui-input-block">
-            <input type="text" name="tecos_bucket" class="layui-input" lay-verify="required" lay-reqtext="请输入存储桶名称" placeholder="请输入存储桶名称" value="{:sysconfig('upload','tecos_bucket')}">
+            <input type="text" name="txcos_bucket" class="layui-input" lay-verify="required" lay-reqtext="请输入存储桶名称" placeholder="请输入存储桶名称" value="{:sysconfig('upload','txcos_bucket')}">
             <tip>例子：ulthon-admin-1251997243</tip>
+        </div>
+    </div>
+    <div class="layui-form-item" v-if="upload_type == 'txcos'" v-cloak>
+        <label class="layui-form-label required">访问域名</label>
+        <div class="layui-input-block">
+            <input type="text" name="txcos_domain" class="layui-input" lay-verify="required" lay-reqtext="请输入访问域名" placeholder="请输入访问域名" value="{:sysconfig('upload','txcos_domain')}">
+            <tip>例子：https://xh-1255063857.cos.ap-chengdu.myqcloud.com</tip>
         </div>
     </div>
 
