--- a/app/admin/view/system/config/upload.html
+++ b/app/admin/view/system/config/upload.html
@@ -1,5 +1,5 @@
 <form id="app-form" class="layui-form layuimini-form">
-
+    <input type="hidden" name="group_name" value="upload">
     <div class="layui-form-item">
         <label class="layui-form-label required">存储方式</label>
         <div class="layui-input-block">
