优化工作台样式；

--- a/app/admin/view/index/welcome.html
+++ b/app/admin/view/index/welcome.html
@@ -150,13 +150,6 @@
                     </div>
                 </div>
                 <div class="layui-card">
-                    <div class="layui-card-header"><i class="fa fa-bullhorn icon icon-tip"></i>系统公告</div>
-                    <div class="layui-card-body layui-text">
-                        <script src='https://gitee.com/ulthon/ulthon_admin/widget_preview' async defer></script>
-                        <div id="osc-gitee-widget-tag"></div>
-                    </div>
-                </div>
-                <div class="layui-card">
                     <div class="layui-card-header"><i class="fa fa-paper-plane-o icon"></i>作者心语</div>
                     <div class="layui-card-body layui-text layadmin-text">
                         <p>本模板基于layui2.7.4以及font-awesome-4.7.0进行实现。layui开发文档地址：<a class="layui-btn layui-btn-xs layui-btn-danger" target="_blank" href="https://layui.gitee.io/v2/">layui文档</a></p>
@@ -164,6 +157,10 @@
                         <p>喜欢此后台模板的可以给我的GitHub和Gitee加个Star支持一下</p>
                         <p class="layui-red">备注：此后台框架永久开源，但请勿进行出售或者上传到任何素材网站，否则将追究相应的责任。</p>
                     </div>
+                </div>
+                <div class="git-container">
+                    <script src='https://gitee.com/ulthon/ulthon_admin/widget_preview' async defer></script>
+                    <div id="osc-gitee-widget-tag" class="layui-card"></div>
                 </div>
 
             </div>
